--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html class="d" lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Moxie & Fourth | Home</title>
+    <title>Alta Heights | Home</title>
       <link rel="icon" type="image/png" href="images/m_and_f_circle_-_rust.png">
       <link rel="preconnect" href="https://static.showit.co">
       <link rel="canonical" href="https://moxieandfourth.com">
