--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alta Heights | Home</title>
-      <link rel="icon" type="image/png" href="images/m_and_f_circle_-_rust.png">
+      <link rel="icon" type="image/png" href="images/ALTA_23_Logos_Blue_Primary Stack.png">
       <link rel="preconnect" href="https://static.showit.co">
       <link rel="canonical" href="https://moxieandfourth.com">
       <meta property="og:image" content="images/le-petale-studio-r9bighm-ze4-unsplash.jpg">
